--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,12 @@ services:
     name: sohibmulk-bot
     runtime: python
     build:
-      environment: python
+      pythonVersion: 3.10.13
     buildCommand: ""
     startCommand: python main.py
     envVars:
       - key: BOT_TOKEN
-        value: "8317409742:AAG1Y_3ze0EGij1zADwrI4up9NNTmelq2ng"
+        value: "PASTE_YOUR_TELEGRAM_BOT_TOKEN_HERE"
       - key: TZ
         value: "Asia/Dushanbe"
+        
